fix overflow again for control dropdown

--- a/h/css/common.scss
+++ b/h/css/common.scss
@@ -563,7 +563,6 @@ blockquote {
   & > ul {
     @include single-transition(max-height, .4s, cubic-bezier(1, 0, 1, 0));
     max-height: 65536px;
-    overflow: hidden;
 
     padding-left: $thread-padding;
     margin-left: -$thread-padding;
@@ -625,6 +624,7 @@ blockquote {
     & > ul {
       @include single-transition(max-height, .4s, cubic-bezier(0, 1, 0, 1));
       max-height: 0;
+      overflow: hidden;
     }
 
     & > .threadexp {
@@ -639,7 +639,6 @@ blockquote {
 .magicontrols {
   @include pie-clearfix;
   background-color: $bodyBackground;
-  overflow: hidden;
 
   & > * {
     display: inline-block;
